<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/vert"
    tools:context=".Liste_Course.AjouterProduit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/appBarAjout">

    <androidx.appcompat.widget.Toolbar


        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/toolbar_back_button_ajout"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/fleche"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/ajout_prod"
            android:textColor="@color/white"
            android:textSize="20sp" />




    </androidx.appcompat.widget.Toolbar>


        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/appBarAjout"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
android:layout_marginTop="150dp"



        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/nom_champ"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/dimenTexte"

            />
    <EditText
        android:id="@+id/editTexte_nomProduit"
        android:layout_width="200dp"
        android:layout_height="40dp"

        android:layout_marginLeft="50dp"
        style="@style/EditTextStyle"
        android:inputType="text"

        android:gravity="center"
        android:background="@drawable/ellipse"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="quantite"
                android:textSize="@dimen/dimenTexte"
                android:layout_marginRight="20dp"
                />
            <EditText
                android:id="@+id/quant_ajouterProduit"
                android:layout_width="100dp"
                android:layout_height="40dp"

                style="@style/EditTextStyle"
                android:inputType="numberDecimal"

                android:gravity="center"
                android:layout_marginLeft="27dp"
                android:background="@drawable/ellipse"/>

            <RelativeLayout
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/ellipse"
                android:layout_marginLeft="10dp"
                >

                <Spinner



                    android:id="@+id/spinner_poid_ajoutProduit"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:padding="10dp"

                    android:entries="@array/poids_ajoutpr"
                    />

            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/ajoutbasedonnes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Ajouter_produit"
            android:layout_gravity="center"

            />




    </LinearLayout>


</RelativeLayout>